# code_tpl_cpp

./: .gitignore  CMakeLists.txt  README.md
algorithm/reverselist/: reverselist.cpp
common/: base64.cpp  objectpool.h
computer/deadlock/: circularreference.cpp  circularreferencesolved.cpp
datastruct/: CMakeLists.txt
datastruct/hashmap/: main.cpp
dependencies/apr/: vc140.idb
dependencies/curl/projects/Windows/VC14/lib/: libcurl.vcxproj
enc_temp_folder/885c63b59f6a7a92144897962951358/: use_arrow.cpp
epoll/: reactor.c  try_et_lt.c
for_array/multidimensional/: basic.cpp
for_array/user_ptr/: traversebyptr.cpp
for_chrono/timer/: timer.cpp
for_const/: basic.cpp
for_copy/: constructor.cpp
for_db/for_sqlite3/: demo.cpp
for_encode/base64/: base64.cpp
for_env/global_env/: global_env.cpp
for_hash/lalian/: lalian.cpp
for_memory/for_align/: byte_align.cpp
for_memory/for_size/: redis.cpp  size.cpp
for_memory/func_return/: struct.cpp
for_memory/show_memory/: use_arrow.cpp
for_move_semantic/: README.md
for_move_semantic/demo/: basic.cpp  demo_string.cpp
for_mysql/mysql/: connect.cpp
for_network/testbacklog/: client.cpp  server.cpp
for_point/function/: func_point.cpp
for_pointer/function/: func_pointer.cpp
for_pragma_once/dir1/: execute.cpp
for_pragma_once/dir2/: print.cpp  print.h
for_pragma_once/dir3/: dir3util.h
for_rdma/: rdma_rc_example.c
for_sdl2/: text_input.cpp
for_string/operator/: join.cc
for_string/str_cls/: str_on_heap.cc
for_template/cls_tpl/: cls_tpl_v1.cpp
for_template/func_tpl/: print.cpp
for_template/vector/: multi_type_vector.cpp
for_thread/basic/: basic.cpp
for_thread/lock/: demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp
for_tree/bplus/: basic.cpp
for_type/type_punning/: type_punning.cpp
for_union/example_one/: example_one.cpp
for_virtualfunc/: basic.cpp
socket/: tcp_client.c  tcp_client_old.c  tcp_listen.c  tcp_server.c  udp_client.c  udp_listen.c
temp/: temp.c  temp.cpp  temp2.cc
tookkit/cache_file/: cache_file.cpp
tookkit/gen_gcp_cmd/: attach_download.c
tookkit/memo_tool/: config.ini  m_sqlite3.cpp  m_sqlite3.h  read_file.cpp  record.cpp  show.cpp  update.cpp
tookkit/parseso/: soparse.c
tookkit/png_tool/: CMakeLists.txt  main.cpp  main.cpp_bak  main.cpp_bak2
tookkit/png_tool/add_hats/: add_hats.cpp
tookkit/png_tool/face_detect/: face_detect.cpp
tookkit/png_tool/functions/: basicfuncs.cpp
util/: file.cc  string.cc  time.cc  util.cc
